<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_name"/>

    <EditText
        android:id="@+id/regName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/register_name_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_group"/>

    <Spinner
        android:entries="@array/LabGroupValue"
        android:id="@+id/regLabGroupSpinner"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:minHeight="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_username"/>

    <EditText
        android:id="@+id/regUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/register_username_hint"
        android:inputType="text"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/bBackToMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_config_back_to_mainmenu"/>


</LinearLayout>